<resources>
    <string name="app_name">Crypto</string>

    <string name="tool_empty"/>
    <string name="main_activity_navigation_about_title">About</string>
    <string name="about_fragment_powered_by">powered by</string>
    <string name="about_fragment_author_name">Mikhedov Konstantin</string>
    <string name="about_fragment_subtitle">student of BIB224</string>
    <string name="main_activity_navigation_hills_title">Hill\'s</string>
    <string name="crypto_module_title">Encryption and Decryption</string>
    <string name="crypto_module_edit_view_hint">Write something here</string>
    <string name="crypto_module_subtitle">Use this block to decrypt and encrypt the text</string>
    <string name="crypto_module_encrypt_btn">Encrypt</string>
    <string name="crypto_module_decrypt_btn">Decrypt</string>
    <string name="key_module_title">Key settings</string>
    <string name="key_module_subtitle">Setup matrix for the cipher</string>
    <string name="key_module_choose_key_size">Choose the key\'s size:</string>
    <string name="key_module_invalid_key">Invalid key entered: gcd(%1$d:%2$d) is not 1</string>
    <string name="key_module_erased_element_error">Fill the cell: (%1$d:%2$d)</string>

    <string-array name="crypto_module_key_sizes" translatable="false">
        <item>1 to 1</item>
        <item>2 to 2</item>
        <item>3 to 3</item>
        <item>4 to 4</item>
        <item>5 to 5</item>
        <item>6 to 6</item>
        <item>7 to 7</item>
    </string-array>
</resources>
