<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/content_card_padding"
    tools:context=".ui.view.CryptoView">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_title_size"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/content_card_padding"
        android:layout_marginEnd="@dimen/content_card_padding"
        android:text="@string/crypto_module_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_subtitle_size"
        android:layout_marginStart="@dimen/content_card_padding"
        android:layout_marginEnd="@dimen/content_card_padding"
        android:text="@string/crypto_module_subtitle"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_card_margin"
        app:cardCornerRadius="@dimen/content_card_radius"
        android:layout_marginStart="@dimen/content_card_padding"
        android:layout_marginEnd="@dimen/content_card_padding"
        android:layout_marginBottom="@dimen/content_card_padding"
        app:cardElevation="@dimen/content_card_elevation"
        style="@style/Widget.Material3.CardView.Filled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/content_card_padding"
            android:divider="@drawable/divider_vertical"
            android:showDividers="middle">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxBackgroundMode="filled"
                android:hint="@string/crypto_module_edit_view_hint"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine|textLongMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:divider="@drawable/divider_horizontal"
                android:showDividers="middle">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/encrypt_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_lock_filled"
                    app:iconSize="16dp"
                    android:text="@string/crypto_module_encrypt_btn"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/decrypt_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_key_filled"
                    app:iconSize="16dp"
                    android:text="@string/crypto_module_decrypt_btn"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>