<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.UserFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/content_card_margin"
        android:layout_marginEnd="@dimen/content_card_margin"
        android:layout_marginBottom="@dimen/floating_bottom_navigation_view_height"
        app:cardCornerRadius="@dimen/content_card_radius"
        app:cardElevation="@dimen/content_card_elevation"
        style="@style/Widget.Material3.CardView.Filled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_card_padding"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/about_fragment_photo_size"
                android:layout_height="@dimen/about_fragment_photo_size"
                app:shapeAppearanceOverlay="@style/Crypto.Theme.ShapeAppearanceOverlay.CircledPhoto"
                android:src="@drawable/me"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fragment_powered_by"
                android:layout_marginTop="16dp"
                android:textSize="12sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fragment_author_name"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fragment_subtitle"
                android:textSize="16sp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>